--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <p class="subtitle">Next-gen screen capture for the modern web.</p>
         </header>
 
+        <div id="system-message" class="system-message hidden"></div>
+
         <section class="preview-area">
             <video id="preview" autoplay muted playsinline></video>
             <div class="overlay-info" id="status-overlay">
